# sigma

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  GEMINI.md  Makefile  README.md  README.zh.md  docker-compose.prebuilt.yml  docker-compose.yml
.github/workflows/: build-agent.yml  build-api.yml  build-probe.yml  build-web.yml  deploy.yml  release.yml
docs/: api-authentication.en.md  api-authentication.zh.md  istio-mesh-integration.en.md  istio-mesh-integration.md  istio-mesh-integration.zh.md  k8s-architecture-cilium.html  k8s-architecture-cilium.md  k8s-architecture-envoy-gateway.html  k8s-architecture-envoy-gateway.md  k8s-architecture-istio.html  k8s-architecture-istio.md  k8s-architecture-traefik.html  k8s-architecture-traefik.md  k8s-architecture.html  k8s-architecture.md
grafana/dashboards/: port-scan.json  tcp-health.json  traffic.json
k8s/: README.md  api-deployment.yaml  cnpg-cluster.yaml  cnpg-pooler.yaml  cnpg-secret.yaml  configmap.yaml  deploy.sh  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml  secret.yaml  web-deployment.yaml
sigma/: Cargo.toml  Dockerfile  README.md
sigma-agent/: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
sigma-agent-ebpf/: Cargo.toml
sigma-agent-ebpf-common/: Cargo.toml
sigma-agent-ebpf-common/src/: lib.rs
sigma-agent-ebpf/src/: main.rs
sigma-agent/src/: client.rs  config.rs  ebpf_traffic.rs  envoy_config.rs  main.rs  mcp.rs  metrics.rs  models.rs  port_scan.rs  system.rs  xds.rs  xds_resources.rs
sigma-api/: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
sigma-api/migrations/: 20250211000001_init.sql  20250211000002_ip_labels.sql  20250211000003_nullable_provider.sql  20250211000004_exchange_rates.sql  20250211000005_users.sql  20250211000006_totp.sql  20250211000007_audit_logs.sql  20250212000008_tickets.sql  20250220000009_envoy.sql  20250224000010_cloudflare.sql  20250224000011_dns_providers.sql  20250225000012_envoy_route_source.sql  20250226000013_vps_purposes.sql  20260226000014_cloud_accounts.sql  20260226000015_vps_ip_history.sql  20260226000016_vps_ip_history_source_fix.sql  20260226000017_ip_labels.sql  20260302000001_dns_record_history.sql  20260302000002_system_settings.sql  20260303000001_dns_record_history_actor.sql  20260305000001_vps_ip_dedup_idx.sql  20260306000001_vps_deleted_status.sql  20260327000001_api_keys.sql  20260328000001_agent_role.sql
sigma-api/src/: auth.rs  config.rs  dns_sync.rs  errors.rs  lib.rs  main.rs  models.rs  notifications.rs  openapi.rs
sigma-api/src/routes/: agent.rs  ansible.rs  api_keys.rs  audit_logs.rs  auth_routes.rs  cloudflare.rs  costs.rs  envoy.rs  exchange_rates.rs  ip_checks.rs  ip_labels.rs  mod.rs  prometheus.rs  providers.rs  rate_limit.rs  settings.rs  stats.rs  tickets.rs  users.rs  vps.rs  vps_duplicates.rs  vps_purposes.rs
sigma-api/src/routes/cloud/: alibaba.rs  aws.rs  digitalocean.rs  linode.rs  mod.rs  volcengine.rs
sigma-api/src/routes/dns/: cloudflare.rs  godaddy.rs  mod.rs  namecom.rs  route53.rs
sigma-api/tests/: audit_logs_test.rs  auth_test.rs  providers_test.rs  tickets_test.rs  users_test.rs
sigma-api/tests/common/: mod.rs
sigma-cli/: CLAUDE.md  Cargo.toml  README.md
sigma-cli/src/: client.rs  config.rs  main.rs  models.rs  output.rs
sigma-cli/src/commands/: ip_checks.rs  mod.rs  providers.rs  stats.rs  vps.rs
sigma-probe/: CLAUDE.md  Cargo.toml  Dockerfile  README.md
sigma-probe/src/: checker.rs  client.rs  config.rs  main.rs  models.rs
sigma-web/: .dockerignore  Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  vite.config.ts
sigma-web/src/: App.tsx  index.css
sigma-web/src/api/: apiKeys.ts  auditLogs.ts  auth.ts  client.ts  cloudAccounts.ts  cloudflare.ts  dns.ts  envoy.ts  ipLabels.ts  providers.ts  settings.ts  stats.ts  tickets.ts  users.ts  vps.ts  vpsDuplicates.ts  vpsPurposes.ts
sigma-web/src/components/: ConfirmDialog.tsx  ImportExportButtons.tsx  Layout.tsx  Pagination.tsx  ProtectedRoute.tsx  StatusBadge.tsx  VpsWorldMap.tsx
sigma-web/src/contexts/: AuthContext.tsx
sigma-web/src/hooks/: useApiKeys.ts  useAuditLogs.ts  useCloudAccounts.ts  useCloudflare.ts  useDns.ts  useEnvoy.ts  useIpLabels.ts  useProviders.ts  useSettings.ts  useStats.ts  useTickets.ts  useUsers.ts  useVps.ts  useVpsDuplicates.ts  useVpsPurposes.ts
sigma-web/src/lib/: countries.ts  projects.ts  purposeColors.ts  utils.ts
sigma-web/src/pages/: ApiKeyFormDialog.tsx  ApiKeyList.tsx  AuditLogList.tsx  ChangePasswordPage.tsx  CloudAccountDialog.tsx  CloudAccountsPage.tsx  CloudflareAccountDialog.tsx  Dashboard.tsx  DnsAccountDialog.tsx  DnsZoneDetail.tsx  DomainsPage.tsx  EnvoyNodeFormDialog.tsx  EnvoyPage.tsx  EnvoyRouteFormDialog.tsx  (+14 more)
sigma/scripts/: prometheus-snippet.yml  sync-targets.sh
sigma/src/: config.rs  db.rs  main.rs  models.rs
(+3 files in other folders)
