[package]
name = "sigma-agent-ebpf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sigma-agent-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
sigma-agent-ebpf-common = { path = "../sigma-agent-ebpf-common" }

[profile.dev]
opt-level = 2
debug = false
overflow-checks = false

[profile.release]
panic = "abort"
lto = true
debug = 2
strip = "none"
codegen-units = 1
