[package]
name = "sigma-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sigma-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
glob = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
axum = "0.8"
libc = "0.2"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
xds-api = "0.2"
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"
