[package]
name = "sigma-api"
version = "0.1.0"
edition = "2021"
description = "Σ Sigma — VPS fleet management with Prometheus integration"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "migrate", "rust_decimal", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "2"
rust_decimal = { version = "1", features = ["serde-with-str"] }
anyhow = "1"
csv = "1"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
