[package]
name = "sigma-cli"
version = "0.1.0"
edition = "2021"
description = "CLI client for Sigma VPS fleet management"

[[bin]]
name = "sigma"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"
toml = "0.8"
dirs = "6"
anyhow = "1"
